--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -8,12 +8,12 @@
         <fieldset>
             <legend>Login</legend>
             <div class="form-group">
-                <label for="username">Username</label>
-                <input type="email" id="username" name="_username" value="" class="form-control" placeholder="username"/>
+                <label for="username">Email</label>
+                <input type="email" id="username" name="_username" value="" class="form-control" placeholder="Email"/>
             </div>
             <div class="form-group">
                 <label for="exampleInputPassword1">Password</label>
-                <input type="password" id="password" name="_password" class="form-control"  placeholder="password"/>
+                <input type="password" id="password" name="_password" class="form-control"  placeholder="Password"/>
             </div>
             <input type="hidden" name="_target_path" value="{{ app.request.get('redirect_to') }}"/>
             <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}"/>
@@ -27,6 +27,5 @@
         <i class="fa fa-sign-in" aria-hidden="true"></i> Forgot password
     </a>
     <a id="register_btn" class="btn btn-info btn-block" href="{{ path('fos_user_registration_register') }}">
-        <i class="fa fa-sign-in" aria-hidden="true"></i>
         S'inscrire</a>
 {% endblock %}
