--- a/app/Resources/views/default/mainpage.html.twig
+++ b/app/Resources/views/default/mainpage.html.twig
@@ -1,7 +1,9 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-   <h1>TALISMAN</h1> <a href="{{  path('fos_user_security_logout') }}">Logout</a>
+    <h1>TALISMAN</h1>
+    <a href="{{  path('fos_user_security_logout') }}">Logout</a>
+    <a href="{{  path('personnage_add') }}">Create a character</a>
 {% endblock %}
 
 {% block stylesheets %}
