--- a/app/Resources/views/default/mainpage.html.twig
+++ b/app/Resources/views/default/mainpage.html.twig
@@ -2,8 +2,10 @@
 
 {% block body %}
     <h1>TALISMAN</h1>
+    <a href="{{  path('personnage_add') }}">Créer un personnage</a>
+    <a href="{{  path('personnage_list') }}">Consulter vos personnages</a>
     <a href="{{  path('fos_user_security_logout') }}">Logout</a>
-    <a href="{{  path('personnage_add') }}">Create a character</a>
+
 {% endblock %}
 
 {% block stylesheets %}
