--- a/app/Resources/views/personnage/personnage_add.html.twig
+++ b/app/Resources/views/personnage/personnage_add.html.twig
@@ -16,26 +16,47 @@
                     </div>
                     <div class="form-group">
                         {{ form_label(form.life, "Life") }}
-                        {{ form_widget(form.life, {'attr': {'class': 'form-control'}, 'disabled': 'true' }) }}
+                        {{ form_widget(form.life, {'attr': {'class': 'form-control'}, 'readonly': 'true' }) }}
                     </div>
                     <div class="form-group">
                         {{ form_label(form.strengh, "Strengh") }}
-                        {{ form_widget(form.strengh, {'attr': {'class': 'form-control'}, 'disabled': 'true' }) }}
+                        {{ form_widget(form.strengh, {'attr': {'class': 'form-control'}, 'readonly': 'true' }) }}
                     </div>
                     <div class="form-group">
                         {{ form_label(form.dexterity, "Dexterity") }}
-                        {{ form_widget(form.dexterity, {'attr': {'class': 'form-control'}, 'disabled': 'true' }) }}
+                        {{ form_widget(form.dexterity, {'attr': {'class': 'form-control'}, 'readonly': 'true' }) }}
                     </div>
                     <div class="form-group">
                         {{ form_label(form.armor, "Armor") }}
-                        {{ form_widget(form.armor, {'attr': {'class': 'form-control'}, 'disabled': 'true' }) }}
+                        {{ form_widget(form.armor, {'attr': {'class': 'form-control'}, 'readonly': 'true' }) }}
                     </div>
                     <button type="submit" id="personnage_reroll" class="btn btn-info">  <i class="fa fa-sign-in" aria-hidden="true"></i> Reroll stats</button>
                     {{ form_widget(form.save, {'attr': {'class': 'btn btn-primary float-right'}, 'label': 'Create your character'}) }}
                     {{ form_rest(form) }}
                     {{ form_end(form) }}
                 </fieldset>
-            </form>
         </div>
     </div>
 {% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script>
+        function reroll()
+        {
+            $('#personnage_life').val(Math.floor(Math.random() * (100 + 1) + 1));
+            $('#personnage_strengh').val(Math.floor(Math.random() * (100 + 1) + 1));
+            $('#personnage_armor').val(Math.floor(Math.random() * (100 + 1) + 1));
+            $('#personnage_dexterity').val(Math.floor(Math.random() * (100 + 1) + 1));
+        }
+        $('#personnage_reroll').click(function(){
+            if($('#personnage_name').is(':empty')) { $('#personnage_name').val("noname");}
+           reroll();
+        });
+        $(document).ready(function(){
+            reroll();
+        });
+    </script>
+{% endblock %}
+
+
