--- a/app/Resources/views/personnage/personnage_add.html.twig
+++ b/app/Resources/views/personnage/personnage_add.html.twig
@@ -5,7 +5,7 @@
         <div class="container">
             {{ form_start(form, { 'method': 'post', 'action': path('personnage_add') }) }}
                 <fieldset>
-                    <legend>{{ "Création du personnage" | trans }}</legend>
+                    <legend>{{ "Character creation" | trans }}</legend>
                     <div class="form-group">
                         {{ form_label(form.name, "Name") }}
                         {{ form_widget(form.name, {'attr': {'class': 'form-control'} }) }}
@@ -16,21 +16,24 @@
                     </div>
                     <div class="form-group">
                         {{ form_label(form.life, "Life") }}
-                        {{ form_widget(form.life, {'attr': {'class': 'form-control'}, 'readonly': 'true' }) }}
+                        {{ form_widget(form.life, {'attr': {'class': 'form-control', 'readonly': 'true'} }) }}
                     </div>
                     <div class="form-group">
                         {{ form_label(form.strengh, "Strengh") }}
-                        {{ form_widget(form.strengh, {'attr': {'class': 'form-control'}, 'readonly': 'true' }) }}
+                        {{ form_widget(form.strengh, {'attr': {'class': 'form-control', 'readonly': 'true'} }) }}
                     </div>
                     <div class="form-group">
                         {{ form_label(form.dexterity, "Dexterity") }}
-                        {{ form_widget(form.dexterity, {'attr': {'class': 'form-control'}, 'readonly': 'true' }) }}
+                        {{ form_widget(form.dexterity, {'attr': {'class': 'form-control', 'readonly': 'true'} }) }}
                     </div>
                     <div class="form-group">
                         {{ form_label(form.armor, "Armor") }}
-                        {{ form_widget(form.armor, {'attr': {'class': 'form-control'}, 'readonly': 'true' }) }}
+                        {{ form_widget(form.armor, {'attr': {'class': 'form-control', 'readonly': 'true'} }) }}
                     </div>
-                    <button type="submit" id="personnage_reroll" class="btn btn-info">  <i class="fa fa-sign-in" aria-hidden="true"></i> Reroll stats</button>
+                    <a href="#" id="personnage_reroll" class="btn btn-info">
+                        <i class="fa fa-sign-in" aria-hidden="true"></i>
+                        Reroll stats
+                    </a>
                     {{ form_widget(form.save, {'attr': {'class': 'btn btn-primary float-right'}, 'label': 'Create your character'}) }}
                     {{ form_rest(form) }}
                     {{ form_end(form) }}
