feat (combat): Création du service
Création du service combat + fix du formulaire de settings du combat + divers fixes.

--- a/app/Resources/views/game/game_play.html.twig
+++ b/app/Resources/views/game/game_play.html.twig
@@ -3,13 +3,8 @@
 {% block body %}
     <div id="wrapper">
         <div class="container">
-           <h1>Bagarre</h1>
+            <h1>Bagarre</h1>
+            <button class="btn btn-primary">Go !</button>
         </div>
     </div>
 {% endblock %}
-
-{% block javascripts %}
-    {{ parent() }}
-{% endblock %}
-
-
